// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createTag should still return tag and index even insertRule thow error 1`] = `
Object {
  "index": 2,
  "styleTag": Object {
    "setAttribute": [Function],
    "sheet": Object {
      "cssRules": Array [
        1,
        2,
      ],
      "insertRule": [Function],
    },
  },
}
`;

exports[`createTag should the tag and total length of css rules 1`] = `
Object {
  "index": 2,
  "styleTag": Object {
    "setAttribute": [Function],
    "sheet": Object {
      "cssRules": Array [
        1,
        2,
      ],
      "insertRule": [MockFunction] {
        "calls": Array [
          Array [
            "test",
            2,
          ],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      },
    },
  },
}
`;
